[fix] wrong font-weight setting

--- a/src/css/components/form/_common.scss
+++ b/src/css/components/form/_common.scss
@@ -8,6 +8,7 @@
   background-color: #ffffff;
   border: 1px solid $horizontal-line-color;
   color: #484848;
+  font-weight: inherit;
 
   i {
     color: #9c9c9c;
